--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+    <div class="bg-lights">
+        <div class="orb orb-1"></div>
+        <div class="orb orb-2"></div>
+        <div class="orb orb-3"></div>
+    </div>
 
 
     <!-- Login / Project Entry Screen -->
