UI Final Polishing: Implemented Hero Landing Page with interactive spotlight interaction and central glowing aura

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <!-- Login / Project Entry Screen -->
     <div id="login-screen" class="login-overlay">
         <div class="login-box">
-            <div class="logo-large">CREATIVE <span class="luxury-text">Lab</span></div>
+            <div class="logo-large">Manage Your <br> <span class="luxury-text">Creative Lab</span> Like a Pro!</div>
 
             <!-- Step 1: User Name -->
             <div id="login-step-1">
-                <p class="login-subtitle">Elevate your <span class="luxury-text">Property</span> with professional
-                    insights.</p>
+                <p class="login-subtitle">Automate your campaign concepts and script writing <br> in one easy-to-use
+                    professional dashboard.</p>
                 <form id="user-form">
                     <input type="text" id="user-name" placeholder="Your Name (e.g., Alice)" required autocomplete="off">
                     <button type="submit" class="btn-primary">Next</button>
@@ -43,7 +43,8 @@
 
             <!-- Step 2: Project Name -->
             <div id="login-step-2" class="hidden">
-                <p class="login-subtitle">Which project are you working on?</p>
+                <p class="login-subtitle">Choose or create a workspace to begin your <span class="luxury-text">Creative
+                        Journey</span>.</p>
                 <form id="project-form">
                     <input type="text" id="project-name" placeholder="Project Name (e.g., Nike Ads)" required
                         autocomplete="off">
