Interactive Lighting: Implemented 'Magnetic Light' borders that follow the mouse, while maintaining global spotlight intensity

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                 <p class="login-subtitle">Automate your campaign concepts and script writing <br> in one easy-to-use
                     professional dashboard.</p>
                 <form id="user-form">
-                    <input type="text" id="user-name" placeholder="Your Name (e.g., Alice)" required autocomplete="off">
-                    <button type="submit" class="btn-primary">Next</button>
+                    <input type="text" id="user-name" class="interactive-light" placeholder="Your Name (e.g., Alice)"
+                        required autocomplete="off">
+                    <button type="submit" class="btn-primary interactive-light">Next</button>
                 </form>
             </div>
 
@@ -46,9 +47,9 @@
                 <p class="login-subtitle">Choose or create a workspace to begin your <span class="luxury-text">Creative
                         Journey</span>.</p>
                 <form id="project-form">
-                    <input type="text" id="project-name" placeholder="Project Name (e.g., Nike Ads)" required
-                        autocomplete="off">
-                    <button type="submit" class="btn-primary">Enter Lab</button>
+                    <input type="text" id="project-name" class="interactive-light"
+                        placeholder="Project Name (e.g., Nike Ads)" required autocomplete="off">
+                    <button type="submit" class="btn-primary interactive-light">Enter Lab</button>
                     <button type="button" id="back-to-user" class="btn-text-only"
                         style="margin-top: 10px; background: none; border: none; color: #666; cursor: pointer;">Back</button>
                 </form>
