--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
     <!-- Login / Project Entry Screen -->
     <div id="login-screen" class="login-overlay">
         <div class="login-box">
-            <div class="logo-large"><span class="brand-logomark"></span> Manage Your <br> <span
-                    class="luxury-text">Creative Lab</span> Like a Pro!</div>
+            <div class="logo-large">
+                <span class="brand-logomark"></span>
+                Creative <span class="luxury-text">Lab</span>
+            </div>
 
             <!-- Step 1: User Name -->
             <div id="login-step-1">
-                <p class="login-subtitle">Automate your campaign concepts and script writing <br> in one easy-to-use
-                    professional dashboard.</p>
+                <p class="login-subtitle">Quem está criando?</p>
                 <form id="user-form">
                     <input type="text" id="user-name" class="interactive-light" placeholder="Your Name (e.g., Alice)"
                         required autocomplete="off">
