UI Precision: Finalized logo removal and font unification for 'Creative Lab'. Switched all remaining interactive states to the Green brand identity and removed layout gaps.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
     <!-- Login / Project Entry Screen -->
     <div id="login-screen" class="login-overlay">
         <div class="login-box">
-            <div class="logo-large">
-                Creative <span class="luxury-text">Lab</span>
-            </div>
+            <div class="logo-large">Creative Lab</div>
 
             <!-- Step 1: User Name -->
             <div id="login-step-1">
@@ -45,8 +43,7 @@
 
             <!-- Step 2: Project Name -->
             <div id="login-step-2" class="hidden">
-                <p class="login-subtitle">Choose or create a workspace to begin your <span class="luxury-text">Creative
-                        Journey</span>.</p>
+                <p class="login-subtitle">Choose or create a workspace to begin your Creative Journey.</p>
                 <form id="project-form">
                     <input type="text" id="project-name" class="interactive-light"
                         placeholder="Project Name (e.g., Nike Ads)" required autocomplete="off">
