--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
         <nav>
             <button class="nav-btn active" data-tab="concepts">Concepts</button>
             <button class="nav-btn" data-tab="scripts">Scripts</button>
+            <button id="logout-btn" class="nav-btn-icon" title="Logout">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                    <polyline points="16 17 21 12 16 7"></polyline>
+                    <line x1="21" y1="12" x2="9" y2="12"></line>
+                </svg>
+            </button>
         </nav>
     </header>
 
